--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,10 @@
     <input type="text" name="prompt_field" placeholder="Enter a prompt" required/>
     <input type="submit" value="Generate"/>
 </form>
-{% if your_input %}
-    <h2>Your input:</h2>
-    <div class="result">{{ your_input }}</div>
-{% endif %}
+{#{% if your_input %}#}
+{#<h2>Your input:</h2>#}
+{#<div class="result">{{ your_input }}</div>#}
+{#{% endif %}#}
 
 {% if result %}
     <h2>Result:</h2>
