Add parseUnstructured to cases

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <img src="{{ url_for('static', filename='dog.png') }}" class="icon"/>
 <h3>Complete a prompt</h3>
 <form action="/" method="post">
-    <input type="text" name="prompt_field" placeholder="Enter a prompt" required/>
+    <input type="text" name="prompt_field" placeholder="Enter a prompt" />
     <input type="submit" value="Generate"/>
 </form>
 {#{% if your_input %}#}
