--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 <img src="{{ url_for('static', filename='dog.png') }}" class="icon"/>
 <h3>Complete a prompt</h3>
 <form action="/" method="post">
-    <textarea name="prompt_field" cols="40" rows="5" placeholder="Enter a prompt"></textarea>
+    <textarea name="prompt_field" class="input_box" cols="100" rows="10" placeholder="Enter a prompt"></textarea>
 
 {#    <input type="text" name="prompt_field" placeholder="Enter a prompt" />#}
-    <input type="submit" value="Translate"/>
+    <input type="submit" value="Submit"/>
 </form>
 {#{% if your_input %}#}
 {#<h2>Your input:</h2>#}
